--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
     <h1> Cours GIT</h1>
+
+    <div>
+        <h2> Ma description</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe enim rem dicta tenetur ipsam quisquam ipsum eaque iure nam non?</p>
+    </div>
+
+    <h2>Mes récompenses</h2>
+    <p> en construction...</p>
 </body>
 </html>
