Ajout commande GIT

--- a/index.html
+++ b/index.html
@@ -10,13 +10,28 @@
 <body>
     <h1> Cours GIT</h1>
 
+
+
+    
     <div>
         <h2> Ma description</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe enim rem dicta tenetur ipsam quisquam ipsum eaque iure nam non?</p>
     </div>
 
+
+
     <h2>Mes récompenses</h2>
     <p> en construction...</p>
     <img src="images/medal_bronze.png" alt="">
+
+
+
+
+    <div>
+        <h2>Mes commandes GIT</h2>
+        <ul>
+            <li> Git Pull</li>
+        </ul>
+    </div>
 </body>
 </html>
