Ajout ligne git push

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h2>Mes commandes GIT</h2>
         <ul>
             <li> Git Pull</li>
+            <li> Git push</li>
         </ul>
     </div>
 </body>
